--- a/src/pages/strenghtsports/powerlifting.astro
+++ b/src/pages/strenghtsports/powerlifting.astro
@@ -5,7 +5,7 @@ import Footer from '../../components/Footer.astro';
 import ContactForm from '../../components/ContactForm.astro';
 import calendar from '../../components/calendar.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../../consts';
-import '../styles/pages/powerlifting.css';
+import '..//../styles/pages/powerlifting.css';
 ---
 
 <!DOCTYPE html>
